fix notifcations appearing behind navbar

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,6 +4,7 @@
   header {
     position: relative;
     height: 100%;
+    padding-top: 56px;
 
     .home-content {
       position: relative;
@@ -58,7 +59,7 @@
 
     @media only screen and (min-width: 576px ) {
       .home-content {
-        padding: 100px 15px;
+        padding: 60px 15px;
       }
     }
   }
